# kestrel

./: .gitignore  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  overview.md
VerifiableC/: Verif_antonopoulos_loop_tiling.v  Verif_antonopoulous_sa_simple.v  Verif_barthe_code_sinkingprod.v  Verif_barthe_codesinkingsimplprod.v  Verif_barthe_loop_pipeline.v  Verif_barthe_strength_reduction.v  Verif_barthe_tiny.v  Verif_unno_square.v  antonopoulos_loop_tiling.c  antonopoulos_sa_simple.c  barthe_code_sinking.c  barthe_strength_reduction_unsigned.c  barthe_tiny.c  unno_square_sum.c
benchmarks/_unaligned/: test.c
benchmarks/antonopoulos/: array-insert.c  loop-tiling.c  naumann.c  shemer.c  simple.c
benchmarks/barthe/: bubblesort.c  code-sinking.c  loop-alignment.c  loop-pipelining.c  loop-unswitching.c  static-caching.c  strength-reduction.c  unroll.c
benchmarks/barthe-euf/: bubblesort.c  code-sinking.c  loop-alignment.c  loop-pipelining.c  loop-unswitching.c  static-caching.c
benchmarks/chen/: barthe1.c  barthe2.c
benchmarks/euf/: list_sum.c
benchmarks/euf-micro/: payments.c  salaary-update.c  salary-update.c
benchmarks/icra/: TA2005_fib.c  TA2005_fib2.c  fibonacci_information_flow.c
benchmarks/rosette/: blackjack-bounded-2.rkt  (+2 more)
experiments/: ablation-cost.py  ablation-extraction.py  alignment-array.py  alignment-euf.py
src/: annealer.rs  crel.rs  crel_egg.rs  crel_parser.rs  crel_writer.rs  eggroll.rs  kestrel_context.rs  lib.rs  main.rs  names.rs  output_mode.rs  shanty.rs  spec.rs  unaligned.rs  var_map.rs
theory/: Makefile  _CoqProject
(+857 files in other folders)
