[package]
name = "kestrel"
version = "0.1.0"
edition = "2021"
default-run = "kestrel"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
coin_cbc = "0.1.7"
egg = "0.9.3"
either = "1.9"
lang-c = "0.15"
log = "0.4.17"
nom = "7"
rand = "0.8.5"
regex = "1.10"
sexp = "1.1.4"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]